--- a/product-app/src/app/core/layout/background/go-back/go-back.component.html
+++ b/product-app/src/app/core/layout/background/go-back/go-back.component.html
@@ -1,4 +1,4 @@
 <div class="back-container">
-  <button class="back-button"></button>
+  <div class="back-icon"></div>
   <p class="back-text">Back</p>
 </div>
