next page button for home

--- a/product-app/src/app/core/layout/background/background.component.html
+++ b/product-app/src/app/core/layout/background/background.component.html
@@ -1,4 +1,6 @@
 <div class="background-container">
   <goback-button></goback-button>
-  <router-outlet></router-outlet>
+  <div class="content-wrapper">
+    <router-outlet></router-outlet>
+  </div>
 </div>
