--- a/product-app/src/app/core/layout/background/background.component.css
+++ b/product-app/src/app/core/layout/background/background.component.css
@@ -3,17 +3,22 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: #f7f0e9;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .background-container {
-  height: 82%;
-  width: 79%;
+  height: 82vh;
+  width: 79vw;
   background: #faf4ee;
   border-radius: 11px;
   border: 1px solid #5e5757;
+  display: flex;
+  flex-direction: column;
+}
+.content-wrapper {
+  flex: 1;
 }
