--- a/product-app/src/app/features/home/home.component.css
+++ b/product-app/src/app/features/home/home.component.css
@@ -1,5 +1,4 @@
 .home-container {
-    /* height: 13vh; */
     width: 18vw;
     margin-top: 25vh;
     aspect-ratio: 2.2;
@@ -15,6 +14,7 @@
     color: #F5F5F5;
     background-color: #72AAE6;
     border: 1px solid #5E5757;
+    user-select: none;
 }
 .home-button:active {
     opacity: 60%;
