basic nav to products list

--- a/product-app/src/app/features/home/home.component.html
+++ b/product-app/src/app/features/home/home.component.html
@@ -1,5 +1,3 @@
-<div class="home-container">
-    <button class="home-button">
-        Product List
-    </button>
+<div class="home-container" (click)="toProductList()">
+  <button class="home-button">Product List</button>
 </div>
