--- a/product-app/src/app/features/home/home.component.css
+++ b/product-app/src/app/features/home/home.component.css
@@ -1,21 +1,21 @@
 .home-container {
-    width: 18vw;
-    margin-top: 25vh;
-    aspect-ratio: 2.2;
-    align-self: center;
-    justify-self: center;
+  width: 18vw;
+  margin-top: 25vh;
+  aspect-ratio: 2.2;
+  align-self: center;
+  justify-self: center;
 }
 .home-button {
-    font-size: 1rem;
-    width: 100%;
-    height: 100%;
-    border-radius: 11px;
-    font-weight: bold;
-    color: #F5F5F5;
-    background-color: #72AAE6;
-    border: 1px solid #5E5757;
-    user-select: none;
+  font-size: 1rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 11px;
+  font-weight: bold;
+  color: #f5f5f5;
+  background-color: #72aae6;
+  border: 1px solid #5e5757;
+  user-select: none;
 }
 .home-button:active {
-    opacity: 60%;
+  opacity: 60%;
 }
