back button semantics + fixing area of touch

--- a/src/app/core/background/background.component.html
+++ b/src/app/core/background/background.component.html
@@ -1,5 +1,5 @@
 <div class="background-container">
-  <goback-button></goback-button>
+  <go-back-button></go-back-button>
   <div class="content-wrapper">
     <router-outlet></router-outlet>
   </div>
