consolidating overlapping css

--- a/src/app/features/products/components/product-list/product-list.component.html
+++ b/src/app/features/products/components/product-list/product-list.component.html
@@ -1,11 +1,11 @@
-<div class="product-list-container">
-  <h1 class="product-title">Products</h1>
-  <table class="product-table">
+<div class="product-container">
+  <h1 class="product-list-title product-title">Products</h1>
+  <table>
     <thead>
       <tr>
-        <th class="column-title name-column">Name</th>
-        <th class="column-title product-column">Price</th>
-        <th class="column-title">Description</th>
+        <th class="column-title name-column subheader">Name</th>
+        <th class="column-title product-column subheader">Price</th>
+        <th class="column-title subheader">Description</th>
       </tr>
     </thead>
     <tbody>
