--- a/src/app/features/products/components/product-card/product-card.component.html
+++ b/src/app/features/products/components/product-card/product-card.component.html
@@ -1,3 +1,3 @@
-<td class="product-text" (click)="clickedProduct()">{{ product.name }}</td>
-<td class="product-text" (click)="clickedProduct()">{{ product.price }}</td>
-<td class="product-text" (click)="clickedProduct()">{{ product.description_short }}</td>
+<td class="product-text product-card-entry" (click)="clickedProduct()">{{ product.name }}</td>
+<td class="product-text product-card-entry" (click)="clickedProduct()">{{ product.price }}</td>
+<td class="product-text product-card-entry" (click)="clickedProduct()">{{ product.description_short }}</td>
