--- a/src/app/features/products/components/product-list/product-list.component.css
+++ b/src/app/features/products/components/product-list/product-list.component.css
@@ -1,13 +1,4 @@
-.product-list-container {
-  margin-left: 5vw;
-  margin-right: 5vw;
-  color: #5e5757;
-  display: flex;
-  flex-direction: column;
-}
-.product-title {
-  font-size: 7vh;
-  font-weight: 600;
+.product-list-title {
   margin-bottom: 3vh;
 }
 .name-column {
@@ -17,6 +8,5 @@
   width: 19vw;
 }
 .column-title {
-  font-size: 3.5vh;
   text-align: left;
 }
